--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "esformula",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "babel -d lib src",
+    "prepare": "npm run build",
+    "build": "npm run build:src",
+    "build:src": "babel -d lib src",
     "test": "ava"
   },
   "dependencies": {
@@ -18,6 +20,10 @@
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.70.0"
   },
+  "files": [
+    "lib",
+    "src"
+  ],
   "ava": {
     "babel": "inherit",
     "require": [
