--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "prepare": "npm run build",
-    "build": "npm run build:src",
+    "build": "npm run build:src && npm run build:flow",
     "build:src": "babel -d lib src",
+    "build:flow": "flow-copy-source src lib",
     "test": "ava"
   },
   "dependencies": {
@@ -18,11 +19,10 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.70.0"
+    "flow-bin": "^0.70.0",
+    "flow-copy-source": "^1.3.0"
   },
   "files": [
-    ".flowconfig",
-    "flow-typed",
     "lib",
     "src"
   ],
