--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
-    "prepare": "npm run build",
-    "build": "npm run build:src && npm run build:flow",
-    "build:src": "babel -d lib src",
-    "build:flow": "flow-copy-source src lib",
+    "clean": "rimraf lib/*",
+    "build": "npm run build:src",
+    "build:src": "babel --extensions '.ts' -d lib src",
+    "typecheck": "tsc --noEmit",
     "test": "ava"
   },
   "dependencies": {
     "acorn": "^5.5.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-typescript": "^7.10.1",
+    "@babel/register": "^7.10.1",
     "ava": "^0.25.0",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.70.0",
-    "flow-copy-source": "^1.3.0"
+    "rimraf": "^3.0.2",
+    "typescript": "^3.9.5"
   },
   "files": [
     "lib",
@@ -28,11 +29,15 @@
   ],
   "ava": {
     "babel": "inherit",
+    "compileEnhancements": false,
+    "extensions": [
+      "ts"
+    ],
     "require": [
-      "babel-register"
+      "@babel/register"
     ],
     "files": [
-      "test/**/*.test.js"
+      "test/**/*.test.ts"
     ]
   }
 }
