--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf lib/* module/* types/*",
-    "build": "run-p build:lib build:module build:types",
-    "build:lib": "BUILD_TARGET=lib babel --extensions '.ts' -d lib src",
-    "build:module": "BUILD_TARGET=module babel --extensions '.ts' -d module src",
-    "build:types": "tsc --project ./src/tsconfig.json --declaration --emitDeclarationOnly --outDir types --rootDir src",
+    "build": "run-p build:lib build:module build:typedef",
+    "build:lib": "BUILD_TARGET=lib babel --extensions '.ts' --source-maps -d lib src",
+    "build:module": "BUILD_TARGET=module babel --extensions '.ts' --source-maps -d module src",
+    "build:typedef": "tsc --project ./src/tsconfig.json --declaration --emitDeclarationOnly --outDir types --rootDir src",
     "typecheck": "tsc --noEmit",
     "test": "jest"
   },
