--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-  "flow.useNPMPackagedFlow": true,
-  "javascript.validate.enable": false
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
