--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:lib": "BUILD_TARGET=lib babel --extensions '.ts' --source-maps -d lib src",
     "build:module": "BUILD_TARGET=module babel --extensions '.ts' --source-maps -d module src",
     "build:typedef": "tsc --project ./src/tsconfig.json --declaration --emitDeclarationOnly --outDir types --rootDir src",
+    "lint": "eslint src test --ext .ts",
     "typecheck": "tsc --noEmit",
     "test": "jest"
   },
@@ -24,8 +25,14 @@
     "@babel/preset-typescript": "^7.10.1",
     "@babel/register": "^7.10.1",
     "@types/jest": "^25.2.3",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.0.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "typescript": "^3.9.5"
   },
