--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,14 @@ jobs:
       - node/install-packages:
           pkg-manager: yarn
       - run:
-          command: yarn run test
-          name: Run tests
+          name: Lint
+          command: yarn lint
+      - run:
+          name: Typecheck
+          command: yarn typecheck
+      - run:
+          name: Test
+          command: yarn test
 workflows:
     build-and-test:
       jobs:
