--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/estree": "^0.0.48",
     "acorn": "^7.2.0"
   },
   "devDependencies": {
